@@ -1,0 +1,14 @@
+/*
+ * To change this template, choose Tools | Templates
+ * and open the template in the editor.
+ */
+
+package it.micronixnetwork.gaf.struts2.action;
+
+/**
+ *
+ * @author kobo
+ */
+public interface JSONAction {
+
+}
