@@ -1,5 +1,0 @@
-<#import "/template/gaf/macro/properties.ftl" as prop>
-
-<#assign namespace=namespace!''/>
-
-<@prop.dialog height="${height}" width="${width}" cardId="${cardId}" namespace="${namespace}"/>
